Modificacion Informacion Personal

--- a/curriculumVitae.html
+++ b/curriculumVitae.html
@@ -29,21 +29,22 @@
                 </div>
 
                 <div id="headInformation2">
-                    <div id="nEt">Nombre:&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Aaron Andres Carvajal Garcia
+                    <div id="nEt"><h3>Nombre:&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Aaron Andres Carvajal Garcia</h3>
                     </div>
-                    <div id="nEt">Email:&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;andres8913@hotmail.com
+                    <div id="nEt"><h3>Email:&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;andres8913@hotmail.com</h3>
                     </div>
-                    <div id="nEt">Telefono:&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;3107650020 - 3202280273</div>
+                    <div id="nEt"><h3>Telefono:&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;3107650020 - 3202280273</h3></div>
                 </div>
             </div>
         </div>
         <div class="bodyContainer">
-            <div id="skills">Competencias</div>
+            <div id="skills"><h4>Programador junior con conocimientos básicos en HTML, CSS, JavaScript, PHP, el framework Laravel y bases de datos MySQL soy un profesional entusiasta y comprometido. Poseo una comprensión fundamental de estas tecnologías, lo que me permite colaborar en proyectos de desarrollo web. Con habilidades en HTML, puedo crear estructuras básicas para páginas web, mientras que mi conocimiento en CSS le permite aplicar estilos y diseñar interfaces visualmente atractivas. Además, su familiaridad con JavaScript me permite agregar interactividad y funcionalidad a las aplicaciones web. Con mis conocimientos en PHP y el framework Laravel, puedo desarrollar aplicaciones web dinámicas y aprovechar la eficiencia y flexibilidad que brinda el framework. Asimismo, mi capacidad para trabajar con bases de datos MySQL me permite almacenar y recuperar información de manera eficiente. El programador junior es un recurso valioso para el equipo, y estoy dispuesto a aprender y crecer profesionalmente en el campo del desarrollo web.</h4></div>
             <div class="personalInformation">
-                <div id="pI">Perfil</div>
-                <div id="pI">Formación</div>
-                <div id="pI">Cursos</div>
-                <div id="pI">Experiencia</div>
+                <div id="pI">Perfil: Profesional con sólidos conocimientos en desarrollo web. Poseo un nivel básico de HTML, CSS, JavaScript, PHP y el framework Laravel. Además, cuento con experiencia en la manipulación de bases de datos MySQL. Me destaco por mi capacidad para implementar diseños atractivos y funcionales utilizando las tecnologías mencionadas. Estoy abierto a aprender y adquirir nuevos conocimientos para mantenerme actualizado en el campo del desarrollo web. Mi pasión por la programación y su habilidad para resolver problemas lo convierten en un candidato ideal para proyectos que requieran un enfoque práctico y soluciones efectivas.</div>
+                <div id="pI">Formación: 2023-Actual Desarrollador FullStack Básico - Universidad Distrital Francisco José De Caldas,     Programa: Todos a la U Atenea.<br>
+                    2023_Actual Inglés Nivel B1 - British Council.
+                  </div>
+                <div id="pI">Cursos: 2023_Actual Habilidades Socioemocionales - Universidad Distrital Francisco José De Caldas,     Programa: Todos a la U Atenea.</div>
             </div>
         </div>
     </div>
