--- a/datosDecontacto.html
+++ b/datosDecontacto.html
@@ -29,7 +29,7 @@
                 <input type="text" id="firstName" placeholder="Ingrese Primer Nombre"><br>
                 <label for="secondName">Segundo Nombre:</label><br>
                 <input type="text" id="secondName" placeholder="Ingrese Segundo Nombre"><br>
-                <!-- <label for="firstLastname">Primer Apellido:</label><br>
+                <label for="firstLastname">Primer Apellido:</label><br>
                 <input type="text" id="firstLastname" placeholder="Ingrese Primer Apellido"><br>
                 <label for="secondLastname">Segundo Apellido:</label><br>
                 <input type="text" id="secondLastname" placeholder="Ingrese Segundo Apellido"><br>
@@ -52,7 +52,7 @@
                 <input type="text" id="officeAddress" placeholder="Ingrese Dirección Oficina"><br>
                 <label for="email">Correo Electrónico:</label><br>
                 <input type="email" id="email" placeholder="Ingrese Correo Electronico"><br>
-                 -->
+                 
                 <button id="footer" type="reset">Limpiar</button>
                 <button id="footer">Enviar</button>
             </form>
