--- a/datosDecontacto.html
+++ b/datosDecontacto.html
@@ -22,28 +22,12 @@
     </div>
 
     <div class="formContainer">
-        <div id="photo">foto</div>
         <div id="form"><h3>Porfavor Déjanos Tus Datos y Nos Pondremos En Contacto</h3>
             <form id="contactForm">
-                <label for="firstName">Primer Nombre:</label><br>
-                <input type="text" id="firstName" placeholder="Ingrese Primer Nombre"><br>
-                <label for="secondName">Segundo Nombre:</label><br>
-                <input type="text" id="secondName" placeholder="Ingrese Segundo Nombre"><br>
-                <label for="firstLastname">Primer Apellido:</label><br>
-                <input type="text" id="firstLastname" placeholder="Ingrese Primer Apellido"><br>
-                <label for="secondLastname">Segundo Apellido:</label><br>
-                <input type="text" id="secondLastname" placeholder="Ingrese Segundo Apellido"><br>
-                <label for="document">Tipo Identificación:</label><br>
-                <select name="document">
-                    <option selected>....</option>
-                    <option value="o">Cédula Ciudadania</option>
-                    <option value="1">Cédula Extranjeria</option>
-                    <option value="2">NIT</option>
-                </select><br>
-                <label for="numberId">Número Identificación:</label><br>
-                <input type="text" id="numberId" placeholder="Ingrese Número de Identificación"><br>
-                <label for="dateBorn">Fecha Nacimiento:</label><br>
-                <input type="date" id="dateBorn"><br>
+                <label for="Names">Nombres:</label><br>
+                <input type="text" id="Names" placeholder="Ingrese sus Nombres"><br>
+                <label for="lastName">Apellidos:</label><br>
+                <input type="text" id="lastName" placeholder="Ingrese sus Apellidos"><br>
                 <label for="landLine">Telefono Fijo:</label><br>
                 <input type="tel" id="landLine" placeholder="Ingrese Numero Teléfono"><br>
                 <label for="cellPhone">Telefono Celular:</label><br>
