--- a/datosDecontacto.html
+++ b/datosDecontacto.html
@@ -22,25 +22,24 @@
     </div>
 
     <div class="formContainer">
-        <div id="form"><h3>Porfavor Déjanos Tus Datos y Nos Pondremos En Contacto</h3>
+        <div id="form"><h1>Porfavor Déjanos Tus Datos y Nos Pondremos En Contacto</h1>
             <form id="contactForm">
                 <label for="Names">Nombres:</label><br>
-                <input type="text" id="Names" placeholder="Ingrese sus Nombres"><br>
+                <input type="text" id="Names" placeholder="Ingrese sus Nombres"><br><br>
                 <label for="lastName">Apellidos:</label><br>
-                <input type="text" id="lastName" placeholder="Ingrese sus Apellidos"><br>
+                <input type="text" id="lastName" placeholder="Ingrese sus Apellidos"><br><br>
                 <label for="landLine">Telefono Fijo:</label><br>
-                <input type="tel" id="landLine" placeholder="Ingrese Numero Teléfono"><br>
+                <input type="tel" id="landLine" placeholder="Ingrese Numero Teléfono"><br><br>
                 <label for="cellPhone">Telefono Celular:</label><br>
-                <input type="tel" id="cellPhone" placeholder="Ingrese Numero Celular"><br>
+                <input type="tel" id="cellPhone" placeholder="Ingrese Numero Celular"><br><br>
                 <label for="officeAddress">Dirreción Oficina:</label><br>
-                <input type="text" id="officeAddress" placeholder="Ingrese Dirección Oficina"><br>
+                <input type="text" id="officeAddress" placeholder="Ingrese Dirección Oficina"><br><br>
                 <label for="email">Correo Electrónico:</label><br>
-                <input type="email" id="email" placeholder="Ingrese Correo Electronico"><br>
+                <input type="email" id="email" placeholder="Ingrese Correo Electronico"><br><br>
                  
-                <button id="footer" type="reset">Limpiar</button>
-                <button id="footer">Enviar</button>
+                <button id="footer1" type="reset">Limpiar</button>
+                <button id="footer2">Enviar</button>
             </form>
-            <button id="footer" onclick="location.href='curriculumVitae.html'">Cancelar</button>
         </div>
     </div>
 </div>
