Almacenamiento en IndexedDB

--- a/datosDecontacto.html
+++ b/datosDecontacto.html
@@ -14,7 +14,7 @@
     <div id="menu">
         <nav>
             <ul>
-                <a id="headMenu" href="curriculumVitae.html">Curriculum</a>
+                <a id="headMenu" href="IndexcurriculumVitae.html">Curriculum</a>
                 <a id="headMenu" href="brochureDeservicios.html">Brochure de servicios</a>
                 <a id="headMenu" href="datosDecontacto.html">Datos de Contacto</a>
             </ul>
