--- a/brochureDeservicios.html
+++ b/brochureDeservicios.html
@@ -23,6 +23,13 @@
             </div>
 
         </div>
+        <div id="devs">
+            <div id="dev">Desarrollo FullStack
+                <iframe id="if" width="300" height="400" src="https://www.youtube.com/embed/D730itwFoq4" title="Qué es un desarrollador Full-Stack (FullStack Web Developer)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>            
+            <div id="dev">Desarrollo Web</div>
+            <div id="dev">Desarrollo Movil</div>
+        </div>
     </div>
 </body>
 
