--- a/brochureDeservicios.html
+++ b/brochureDeservicios.html
@@ -24,11 +24,19 @@
 
         </div>
         <div id="devs">
-            <div id="dev">Desarrollo FullStack
-                <iframe id="if" width="300" height="400" src="https://www.youtube.com/embed/D730itwFoq4" title="Qué es un desarrollador Full-Stack (FullStack Web Developer)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div id="dev"><h1>Desarrollo FullStack</h1>
+                <div>
+                <iframe width="400" height="400" src="https://www.youtube.com/embed/D730itwFoq4" title="Qué es un desarrollador Full-Stack (FullStack Web Developer)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
             </div>            
-            <div id="dev">Desarrollo Web</div>
-            <div id="dev">Desarrollo Movil</div>
+            <div id="dev"><h1>Desarrollo Web</h1>
+                <div><iframe width="400" height="400" src="https://www.youtube.com/embed/LAlceG2cY_w?list=PLM-Y_YQmMEqDcV8cJcosRsqJJNrhlpwzb" title="Curso Desarrollo Web Profesional Desde Cero 2022" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div id="dev"><h1>Desarrollo Movil</h1>
+                <div><iframe width="400" height="400" src="https://www.youtube.com/embed/H8tykt3pKTU" title="¿Qué lenguajes existen para el desarrollo móvil? - La mejor explicación en español" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
     </div>
 </body>
