Validacion Formulario BackEnd

--- a/datosDecontacto.html
+++ b/datosDecontacto.html
@@ -39,10 +39,10 @@
                 <label for="profesion">Profesion:</label><br>
                 <input type="text" id="profesion" placeholder="Ingrese Profesion"><br><br>
                 <label for="rol">Rol:</label><br>
-                <input type="text" id="rol" placeholder="Ingrese Rol"><br><br>
+                <input type="text" id="rol" placeholder="Ingrese Rol"><br>
                  
                 <button id="footer1" type="reset">Limpiar</button>
-                <button id="footer2" onclick="saveCustomer()">Enviar</button>
+                <button type="button" id="footer2"  onclick="saveCustomer()">Enviar</button>
             </form>
         </div>
     </div>
