--- a/datosDecontacto.html
+++ b/datosDecontacto.html
@@ -44,6 +44,7 @@
                 <button id="footer1" type="reset">Limpiar</button>
                 <button type="button" id="footer2"  onclick="saveCustomer()">Enviar</button>
             </form>
+            <button type="button" onclick="getCustomers()">Consultar</button>
         </div>
     </div>
 </div>
